--- a/packages/phaserExtension/package.json
+++ b/packages/phaserExtension/package.json
@@ -34,7 +34,7 @@
     "@enable3d/common": "^0.22.0-dev.1",
     "@enable3d/three-graphics": "^0.22.0-dev.1",
     "@enable3d/three-wrapper": "^0.22.0-dev.1",
-    "eventemitter3": "^4.0.4"
+    "@yandeu/events": "0.0.2"
   },
   "peerDependencies": {
     "phaser": "^3.52.0"
