--- a/packages/threeGraphics/package.json
+++ b/packages/threeGraphics/package.json
@@ -29,7 +29,8 @@
     "@enable3d/ammo-physics": "^0.22.0-dev.1",
     "@enable3d/common": "^0.22.0-dev.1",
     "@enable3d/three-wrapper": "^0.22.0-dev.1",
-    "@yandeu/events": "0.0.4"
+    "@yandeu/events": "0.0.5",
+    "@yandeu/tap": "0.0.2"
   },
   "peerDependencies": {
     "@types/matter-js": "^0.14.10",
