--- a/packages/phaserExtension/package.json
+++ b/packages/phaserExtension/package.json
@@ -37,7 +37,8 @@
     "@yandeu/events": "0.0.4"
   },
   "peerDependencies": {
-    "phaser": "^3.52.0"
+    "phaser": "^3.52.0",
+    "three": "~0.125.2"
   },
   "funding": {
     "url": "https://github.com/sponsors/yandeu"
