Update all peerDependencies

--- a/packages/threeGraphics/package.json
+++ b/packages/threeGraphics/package.json
@@ -34,9 +34,10 @@
   },
   "peerDependencies": {
     "@types/matter-js": "^0.14.10",
+    "@types/three": "~0.126.2",
     "matter-js": "^0.16.1",
     "poly-decomp": "^0.3.0",
-    "three": "~0.125.2"
+    "three": "~0.126.1"
   },
   "funding": {
     "url": "https://github.com/sponsors/yandeu"
