--- a/packages/ammoPhysics/package.json
+++ b/packages/ammoPhysics/package.json
@@ -34,7 +34,8 @@
     "@yandeu/events": "0.0.5"
   },
   "peerDependencies": {
-    "three": "~0.125.2"
+    "@types/three": "~0.126.2",
+    "three": "~0.126.1"
   },
   "funding": {
     "url": "https://github.com/sponsors/yandeu"
